--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -3,8 +3,10 @@
 
     <!-- Home screen -->
     <string name="currency_converter">Currency converter</string>
-    <string name="country_code">Country code</string>
+    <string name="currency_code">Currency code</string>
     <string name="amount">Amount</string>
     <string name="swap">Swap</string>
+    <string name="expand">Expand</string>
+    <string name="close">Close</string>
 
 </resources>
